This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Incorrect reference counting for sys.warnoptions and sys._xoptions
Type: behavior Stage: resolved
Components: Interpreter Core Versions: Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: eric.snow, miss-islington, serhiy.storchaka, vstinner
Priority: normal Keywords: patch

Created on 2018-12-10 09:18 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 11063 merged serhiy.storchaka, 2018-12-10 09:19
PR 11065 merged miss-islington, 2018-12-10 10:09
Messages (3)
msg331478 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-12-10 09:18
Borrowed references are incorrectly decrefed in get_warnoptions() and get_xoptions() in Python/sysmodule.c. The bag was introduced in issue30860.
msg331482 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-12-10 10:08
New changeset 72ff7b4c000f7b8199231a0eb1ca4b119fab40a5 by Serhiy Storchaka in branch 'master':
bpo-35451: Fix reference counting for sys.warnoptions and sys._xoptions. (GH-11063)
https://github.com/python/cpython/commit/72ff7b4c000f7b8199231a0eb1ca4b119fab40a5
msg331486 - (view) Author: miss-islington (miss-islington) Date: 2018-12-10 10:26
New changeset fc79175f5e6424c4978ba9e9b9bc006778cdfd40 by Miss Islington (bot) in branch '3.7':
bpo-35451: Fix reference counting for sys.warnoptions and sys._xoptions. (GH-11063)
https://github.com/python/cpython/commit/fc79175f5e6424c4978ba9e9b9bc006778cdfd40
History
Date User Action Args
2022-04-11 14:59:09adminsetgithub: 79632
2018-12-10 10:42:15serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-12-10 10:26:39miss-islingtonsetnosy: + miss-islington
messages: + msg331486
2018-12-10 10:09:13miss-islingtonsetpull_requests: + pull_request10299
2018-12-10 10:08:57serhiy.storchakasetmessages: + msg331482
2018-12-10 09:19:51serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request10297
2018-12-10 09:18:29serhiy.storchakacreate