bpo-35451: Fix reference counting for sys.warnoptions and sys._xoptions. (GH-11063)